# midas-v2

./: .gitignore  README.md  pyproject.toml
tests/: test_e2e.py  test_viral.py
tribe_score/: __init__.py  brain_svg.py  cli.py  compare.py  evaluator.py  regions.py  scorer.py
tribev2/: eventstransforms.py  utils.py
