[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "midas-v2"
version = "0.2.0"
description = "Three independent mechanisms to predict content virality — before you post."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "AJ Green"}, {name = "Meta Platforms, Inc."}]

dependencies = [
  "neuralset==0.0.2",
  "neuraltrain==0.0.2",
  "torch>=2.5.1",
  "numpy==2.2.6",
  "torchvision>=0.20",
  "x_transformers==1.27.20",
  "einops",
  "pyyaml",
  "moviepy>=2.2.1",
  "huggingface_hub",
  "gtts",
  "langdetect",
  "spacy",
  "soundfile",
  "pip",
  "Levenshtein",
  "julius",
  "transformers",
  "click",
  "rich",
]

[project.scripts]
midas = "tribe_score.cli:main"
tribe-score = "tribe_score.cli:main"

[project.urls]
Homepage = "https://github.com/ajsai47/midas-v2"
Repository = "https://github.com/ajsai47/midas-v2"

[project.optional-dependencies]
  plotting = [
    "nibabel",
    "matplotlib",
    "seaborn",
    "colorcet",
    "nilearn",
    "scipy",
    "pyvista",
    "scikit-image",
  ]
  training = [
    "nibabel",
    "torchmetrics",
    "wandb",
    "lightning",  
  ]
  test = [
    "pytest",
  ]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
include = ["tribe*"]
